progress report done

--- a/notebooks/Kaylan/docs/Individual Progress Report/indv_prog_report.tex
+++ b/notebooks/Kaylan/docs/Individual Progress Report/indv_prog_report.tex
@@ -76,13 +76,19 @@ The RNN would be trained on a dataset of gestures to learn the patterns in the d
 \subsection{Testing/Verification}
 Testing and verification for the sensor subsystem will be done in two stages: first, testing the communication between the IMUs and the control unit, and second, testing the filtering of the IMU data. The first stage will involve sending data from the IMUs to the control unit and verifying that the data is being transmitted correctly. This will involve writing test code to read the data from the IMUs and send it to the control unit via the I2C protocol. The second stage will involve filtering the data from the IMUs to minimize noise and ensure that the control unit can accurately interpret the user's gestures. This will involve writing test code to apply different filtering techniques to the IMU data and verifying that the filtered data is more accurate than the raw data.
 \subsubsection{Communication}
-For the first stage, we will write test code to read the data from the IMUs and send it to the control unit via the I2C protocol. We will first be using the dev board for the ESP32 and pre made breakout boards purchased from Amazon to test the communication between the IMUs and the control unit. Once we have verified that the communication is working correctly, we will complete the custom PCB for the IMU breakout board and test the communication with the custom PCB for the control unit. The communication will be tested by sending data from the IMUs to the control unit and verifying that the data is being transmitted correctly. This will involve writing test code to read the data from the IMUs and send it to the control unit via the I2C protocol.
+For the first stage, we will write test code to read the data from the IMUs and send it to the control unit via the I2C protocol. We will first be using the dev board for the ESP32 and pre made breakout boards purchased from Amazon to test the communication between the IMUs and the control unit. Once we have verified that the communication is working correctly, we will complete the custom PCB for the IMU breakout board and test the communication with the custom PCB for the control unit. The communication will be tested by sending data from the IMUs to the control unit and verifying that the data is being transmitted correctly. In the case that the communication does not work properly, we will spend some time debugging the issue and if it is not resolved, we will consider switching to a different communication protocol such as SPI, and if that doesn't work, we will likely just use the pre made breakout boards for the IMUs.
 \subsubsection{Software}
-For the second stage, we will write test code to apply different filtering techniques to the IMU data and verify that the filtered data is more accurate than the raw data. We will first test the filtering techniques on the dev board for the ESP32 and pre made breakout boards purchased from Amazon. Once we have verified that the filtering is working correctly, we will complete the custom PCB for the control unit and test the filtering with the custom PCB. The filtering will be tested by applying different filtering techniques to the IMU data and verifying that the filtered data is more accurate than the raw data.
+For the second stage, we will write test code to apply different filtering techniques to the IMU data and verify that the filtered data is more accurate than the raw data. We will first test the filtering techniques on the dev board for the ESP32 and pre made breakout boards purchased from Amazon. Once we have verified that the filtering is working correctly, we will complete the custom PCB for the control unit and test the filtering with the custom PCB. The filtering will be tested by applying different filtering techniques to the IMU data and verifying that the filtered data is more accurate than the raw data. In the case that the filtering does not work properly, we will spend some time debugging the issue and if it is not resolved, there isn't much we can do other than try different filtering techniques. The data will likely need to be filtered before it is sent to out algorithm for interpretation or else we will get inaccurate results.
 
-For the RNN, we will first train the model on a dataset of gestures to learn the patterns in the data and predict the user's intended gesture. We will then test the model on a separate dataset of gestures to verify that the model can accurately interpret the user's gestures. This will involve writing test code to apply the model to the dataset of gestures and verifying that the model can accurately predict the user's intended gesture. Once the model performs well on the test dataset, we will integrate it into the control unit and test it with the IMUs to verify that it can accurately interpret the user's gestures in real-time. It is likely that we will need to optimize the model fro deployment on the microcontroller to ensure that it can run in real-time; this might involve reducing the complexity of the model via techniques such as pruning or using a more efficient implementation of the model.
+For the RNN, we will first train the model on a dataset of gestures to learn the patterns in the data and predict the user's intended gesture. We will then test the model on a separate dataset of gestures to verify that the model can accurately interpret the user's gestures. This will involve writing test code to apply the model to the dataset of gestures and verifying that the model can accurately predict the user's intended gesture. Once the model performs well on the test dataset, we will integrate it into the control unit and test it with the IMUs to verify that it can accurately interpret the user's gestures in real-time. It is likely that we will need to optimize the model fro deployment on the microcontroller to ensure that it can run in real-time; this might involve reducing the complexity of the model via techniques such as pruning or using a more efficient implementation of the model. In the case that the model does not perform well on the test dataset, we will spend some time debugging the issue and if it is not resolved, we will consider a more straightforward algorithm for gesture recognition, such as a decision tree.
 \section{Conclusion}
-this is the conclusion 
+Throughout the progression of this project, I have been focusing on the sensor subsystem, specifically the IMU breakout board and the communication between the IMUs and the control unit. I have designed the PCB for the IMU breakout board and am currently testing the communication between the IMUs and the control unit. I am also researching different filtering techniques with my teammmates to minimize noise in the IMU data and considering using an RNN with LSTM to interpret the data from the IMUs. I would say this part of the design is equal in workload compared to my teammates, as we all have different responsibilities in the project. 
+
+Currently, we are slightly behind schedule due to the switch in IMUs and the need to redesign the breakout board and communication protocol. Additionally we were unable to test the custom PCBs (control unit and IMU) before the second round of orders, so we missed out on a potential time saver there. However, we are confident that we can catch up and complete the project on time. 
+
+Moving forward, our plan comprises of testing of the IMU-control unit communication and the implementation of data filtering techniques. Specifically, within the next two weeks, we aim to finalize the communication protocols and begin integrating data filtering algorithms. Concurrently, I will advance my research into utilizing an RNN for gesture data interpretation, with a goal to have a preliminary model ready for training on gesture data within the next two weeks as well. This approach is ambitious, considering the complexity of neural network models and the need for a substantial dataset for training. However, it is also realistic given our current progress and the resources available to us, including pre-existing datasets and models that can be adapted to our needs. 
+
+The ultimate objective is to integrate the RNN model with the sensor and control subsystems, ensuring real-time, accurate gesture recognition. By the project's conclusion, we anticipate meeting this goal and delivering a fully functional gesture-based turn signaling system that enhances the safety and convenience of cyclists.
 \newpage
 \bibliography{references}
 
