--- a/notebooks/Kaylan/docs/Individual Progress Report/indv_prog_report.tex
+++ b/notebooks/Kaylan/docs/Individual Progress Report/indv_prog_report.tex
@@ -80,7 +80,7 @@ For the first stage, we will write test code to read the data from the IMUs and 
 \subsubsection{Software}
 For the second stage, we will write test code to apply different filtering techniques to the IMU data and verify that the filtered data is more accurate than the raw data. We will first test the filtering techniques on the dev board for the ESP32 and pre made breakout boards purchased from Amazon. Once we have verified that the filtering is working correctly, we will complete the custom PCB for the control unit and test the filtering with the custom PCB. The filtering will be tested by applying different filtering techniques to the IMU data and verifying that the filtered data is more accurate than the raw data. In the case that the filtering does not work properly, we will spend some time debugging the issue and if it is not resolved, there isn't much we can do other than try different filtering techniques. The data will likely need to be filtered before it is sent to out algorithm for interpretation or else we will get inaccurate results.
 
-For the RNN, we will first train the model on a dataset of gestures to learn the patterns in the data and predict the user's intended gesture. We will then test the model on a separate dataset of gestures to verify that the model can accurately interpret the user's gestures. This will involve writing test code to apply the model to the dataset of gestures and verifying that the model can accurately predict the user's intended gesture. Once the model performs well on the test dataset, we will integrate it into the control unit and test it with the IMUs to verify that it can accurately interpret the user's gestures in real-time. It is likely that we will need to optimize the model fro deployment on the microcontroller to ensure that it can run in real-time; this might involve reducing the complexity of the model via techniques such as pruning or using a more efficient implementation of the model. In the case that the model does not perform well on the test dataset, we will spend some time debugging the issue and if it is not resolved, we will consider a more straightforward algorithm for gesture recognition, such as a decision tree.
+For the RNN, we will first train the model on a dataset of gestures to learn the patterns in the data and predict the user's intended gesture. We will then test the model on a separate dataset of gestures to verify that the model can accurately interpret the user's gestures. This will involve writing test code to apply the model to the dataset of gestures and verifying that the model can accurately predict the user's intended gesture. Once the model performs well on the test dataset, we will integrate it into the control unit and test it with the IMUs to verify that it can accurately interpret the user's gestures in real-time. It is likely that we will need to optimize the model for deployment on the microcontroller to ensure that it can run in real-time; this might involve reducing the complexity of the model via techniques such as pruning or using a more efficient implementation of the model. In the case that the model does not perform well on the test dataset, we will spend some time debugging the issue and if it is not resolved, we will consider a more straightforward algorithm for gesture recognition, such as a decision tree.
 \section{Conclusion}
 Throughout the progression of this project, I have been focusing on the sensor subsystem, specifically the IMU breakout board and the communication between the IMUs and the control unit. I have designed the PCB for the IMU breakout board and am currently testing the communication between the IMUs and the control unit. I am also researching different filtering techniques with my teammmates to minimize noise in the IMU data and considering using an RNN with LSTM to interpret the data from the IMUs. I would say this part of the design is equal in workload compared to my teammates, as we all have different responsibilities in the project. 
 
