updating images and sections

--- a/notebooks/Kaylan/docs/Final Report/sections/conclusion.tex
+++ b/notebooks/Kaylan/docs/Final Report/sections/conclusion.tex
@@ -1,4 +1,6 @@
 \section{Conclusion}
 
+\subsection{Accomplishments}
+\subsection{Uncertainties}
 \subsection{Future Work}
 \subsection{Ethics Considerations}
