--- a/notebooks/Kaylan/docs/Final Report/final_report.tex
+++ b/notebooks/Kaylan/docs/Final Report/final_report.tex
@@ -4,12 +4,22 @@
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amsfonts}
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage{tabularx}
 \usepackage[shortlabels]{enumitem}
 \usepackage[parfill]{parskip}
 \usepackage[letterpaper, portrait, margin=1in]{geometry}
+\usepackage{longtable}
+\usepackage{changepage}
+\usepackage{booktabs}
+\usepackage{siunitx}
+\usepackage{multirow}
+\usepackage{mathrsfs}
+\usepackage{array}
+
 
 % bibliography package
 % \usepackage{csquotes}
