--- a/notebooks/Kaylan/docs/Final Report/sections/costs.tex
+++ b/notebooks/Kaylan/docs/Final Report/sections/costs.tex
@@ -1,1 +1,32 @@
+\newpage
 \section{Costs \& Schedule}
+\subsection{Costs}
+The total cost of parts will be approximately $\$234.96$ and the expected labor costs are calculated as $\$40/\text{hrs} * 2.5 * 60 \text{hrs} = \$6,000$. This will be applied to all 3 team members so the total labor cost is $\$6,000 * 3 = \$18,000$. This comes out to a total cost of $\$18,234.96$.
+\begin{table}[htbp]
+    \centering
+    \caption{Bill of Materials}
+    \begin{tabular}{@{} l l S[table-format=1] S[table-format=2.2] S[table-format=5.2] l @{}}
+    \toprule
+    \textbf{Description} & \textbf{Manufacturer} & {\textbf{Quantity}} & {\textbf{Price/unit}} & {\textbf{Total Price}} & {\textbf{Link}} \\
+    \midrule
+    velcro strips       & VELCRO Brand         & 1                  & 19.62               & 19.62               & \href{https://tinyurl.com/96a2mzmp}{Link} \\
+    ESP32               & Espressif Systems    & 1                  & 7.69                & 7.69                & \href{https://tinyurl.com/53m9m6st}{Link} \\
+    LED strips          & Aclorol              & 2                  & 5.99                & 11.98               & \href{https://tinyurl.com/bdjy37u6}{Link} \\
+    Battery             & Panasonic - BSG      & 1                  & 40.50               & 40.50               & \href{https://tinyurl.com/3edpx9py}{Link} \\
+    Voltage Regulator   & STMicroElectronics   & 1                  & 6.95                & 6.95                & \href{https://tinyurl.com/mucrrked}{Link} \\
+    IMU breakout board  & Adafruit             & 3                  & 18.50               & 55.50               & \href{https://tinyurl.com/nhkujh4z}{Link} \\
+    0.065 Ohm resistors & TFT Corp             & 4                  & 0.55                & 2.20                & \href{https://tinyurl.com/5d66cf4v}{Link} \\
+    LED Driver          & Analog Devices Inc   & 3                  & 5.70                & 17.10               & \href{https://tinyurl.com/27exmb3d}{Link} \\
+    1A Diode            & onsemi               & 3                  & 0.50                & 1.50                & \href{https://tinyurl.com/2s4j6yfa}{Link} \\
+    Inductors           & SAC Inc & 3          & 0.82               & 2.46                & \href{https://tinyurl.com/j4b4ezpv}{Link} \\
+    ICM-20948 IMU       & TDK InvenSense       & 10                 & 6.91                & 69.08               & \href{https://tinyurl.com/m3rkp7xx}{Link} \\
+    \addlinespace
+    \textbf{Components Total} & {N/A} & {N/A} & {N/A} & 234.96 & \\
+    \textbf{Labor}            & {N/A} & {3}    & {40.00} & 18000.00 & \\
+    \midrule
+    \textbf{Total}            & {N/A} & {N/A}  & {N/A} & 18234.96 & \\
+    \bottomrule
+    \end{tabular}
+    \end{table}
+\newpage
+\subsection{Schedule}
