--- a/notebooks/Kaylan/docs/Final Report/references.bib
+++ b/notebooks/Kaylan/docs/Final Report/references.bib
@@ -74,3 +74,11 @@
   howpublished = "\url{https://drs.illinois.edu/Page/SafetyLibrary/BatterySafety}",
   note = "[Online; accessed 22-February-2024]"
 }
+
+@misc{invensense2016icm20948,
+  title        = {{DS-000189-ICM-20948 v1.3}},
+  author       = {{TDK InvenSense}},
+  year         = 2016,
+  howpublished = {\url{https://invensense.tdk.com/wp-content/uploads/2016/06/DS-000189-ICM-20948-v1.3.pdf}},
+  note         = {Accessed: [Online; accessed 22-March-2024]}
+}
